--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -39,19 +39,17 @@
                 </label>
                 <input type="file" id="course_list" name="course_file" accept=".xlsx,.xls,.xlsm" style="display: none;">
 
-                <!-- Upload Result -->
-                <div id="courseUploadResult" class="result-message"></div>
-                <div id="courseUploadErrors" class="error-message"></div>
-
-                {% with messages = get_flashed_messages(with_categories=true) %}
-                    {% if messages %}
-                        {% for category, message in messages %}
+                {% if courseUploadResult %}
+                    <div class="result-message">{{ courseUploadResult }}</div>
+                {% elif courseUploadErrors %}
+                    <div class="error-message">{{ courseUploadErrors }}</div>
+                {% elif get_flashed_messages(with_categories=true) %}
+                    {% for category, message in get_flashed_messages(with_categories=true) %}
                         <div class="alert alert-{{ category }}">
                             <strong>{{ category.capitalize() }}:</strong> {{ message }}
                         </div>
-                        {% endfor %}
-                    {% endif %}
-                {% endwith %}
+                    {% endfor %}
+                {% endif %}
 
                 <!-- Upload Form Submit -->
                 <div class="button-wrapper">
@@ -64,77 +62,72 @@
     <!-- Manual Form -->
     <form id="manualForm" action="{{ url_for('admin_manageCourse') }}" method="POST" style="display: none;">
         <div id="manualSection" class="function-frame">
-            <div class="profile-frame">
-                <h4 style="text-align: center;">Manual Data Entry Section</h4>
-                <div class="form-right">
-                    <table class="enter-data-table">
-                        <tr style="text-align: center;"><th>Field</th><th>Input</th></tr>
-                        <tr>
-                            <td><label id="departmentLabel">Department</label></td>
-                            <td>
-                                <select name="courseDepartment" required>
-                                    <option value="" disabled selected>Select Department</option>
-                                    {% for dept in department_data %}
-                                        <option value="{{ dept.departmentCode }} - {{ dept.departmentName }}">
-                                            ({{ dept.departmentCode }}) {{ dept.departmentName }}
-                                        </option>
-                                    {% endfor %}
-                                </select>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>Course Code</td>
-                            <td><input type="text" name="courseCode" value="{{ courseCode_text }}" required></td>
-                        </tr>
-                        <tr>
-                            <td>Course Section</td>
-                            <td><input type="text" name="courseSection" value="{{ courseSection_text }}" required></td>
-                        </tr>
-                        <tr>
-                            <td>Course Name</td>
-                            <td><input type="text" name="courseName" value="{{ courseName_text }}" required></td>
-                        </tr>
-                    </table>
-                </div>
+            <h4 style="text-align: center;">Manual Data Entry Section</h4>
+            <div class="form-right">
+                <table class="enter-data-table">
+                    <tr style="text-align: center;"><th>Field</th><th>Input</th></tr>
+                    <tr>
+                        <td><label id="departmentLabel">Department</label></td>
+                        <td>
+                            <select name="courseDepartment" required>
+                                <option value="" disabled selected>Select Department</option>
+                                {% for dept in department_data %}
+                                    <option value="{{ dept.departmentCode }} - {{ dept.departmentName }}">
+                                        ({{ dept.departmentCode }}) {{ dept.departmentName }}
+                                    </option>
+                                {% endfor %}
+                            </select>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Course Code</td>
+                        <td><input type="text" name="courseCode" value="{{ courseCode_text }}" required></td>
+                    </tr>
+                    <tr>
+                        <td>Course Section</td>
+                        <td><input type="text" name="courseSection" value="{{ courseSection_text }}" required></td>
+                    </tr>
+                    <tr>
+                        <td>Course Name</td>
+                        <td><input type="text" name="courseName" value="{{ courseName_text }}" required></td>
+                    </tr>
+                </table>
+            </div>
+            <br>
 
-                <br>
+            <div class="form-right">
+                <table class="enter-data-table">
+                    <tr style="text-align: center;"><th>Field</th><th>Input</th></tr>
+                    <tr>
+                        <td>Course Credit Hours</td>
+                        <td><input type="number" name="courseHour" value="{{ courseHour_text }}" required></td>
+                    </tr>
+                    <tr>
+                        <td>Practical Lecturer</td>
+                        <td><input type="text" name="coursePractical" value="{{ coursePractical_text }}"></td>
+                    </tr>
+                    <tr>
+                        <td>Tutorial Lecturer</td>
+                        <td><input type="number" name="courseTutorial" value="{{ courseTutorial_text }}"></td>
+                    </tr>
+                </table>
+            </div>
 
-                <div class="form-right">
-                    <table class="enter-data-table">
-                        <tr style="text-align: center;"><th>Field</th><th>Input</th></tr>
-                        <tr>
-                            <td>Course Credit Hours</td>
-                            <td><input type="number" name="courseHour" value="{{ courseHour_text }}" required></td>
-                        </tr>
-                        <tr>
-                            <td>Practical Lecturer</td>
-                            <td><input type="text" name="coursePractical" value="{{ coursePractical_text }}"></td>
-                        </tr>
-                        <tr>
-                            <td>Tutorial Lecturer</td>
-                            <td><input type="number" name="courseTutorial" value="{{ courseTutorial_text }}"></td>
-                        </tr>
-                    </table>
-                </div>
+            {% if courseUploadResult %}
+                <div class="result-message">{{ courseUploadResult }}</div>
+            {% elif courseUploadErrors %}
+                <div class="error-message">{{ courseUploadErrors }}</div>
+            {% elif get_flashed_messages(with_categories=true) %}
+                {% for category, message in get_flashed_messages(with_categories=true) %}
+                    <div class="alert alert-{{ category }}">
+                        <strong>{{ category.capitalize() }}:</strong> {{ message }}
+                    </div>
+                {% endfor %}
+            {% endif %}
 
-                <!-- Upload Result -->
-                <div id="courseUploadResult" class="result-message"></div>
-                <div id="courseUploadErrors" class="error-message"></div>
-
-                {% with messages = get_flashed_messages(with_categories=true) %}
-                    {% if messages %}
-                        {% for category, message in messages %}
-                        <div class="alert alert-{{ category }}">
-                            <strong>{{ category.capitalize() }}:</strong> {{ message }}
-                        </div>
-                        {% endfor %}
-                    {% endif %}
-                {% endwith %}
-
-                <!-- Upload Form Submit -->
-                <div class="button-wrapper">
-                    <button type="submit">Upload Course</button>
-                </div>
+            <!-- Upload Form Submit -->
+            <div class="button-wrapper">
+                <button type="submit">Upload Course</button>
             </div>
         </div>
     </form>
