--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -2,11 +2,6 @@
 {% block title %}Admin ManageCourse{% endblock %}
 {% block content %}
 <div class="menu-section">
-    <h2>Manage Course</h2>
-    <h3>Choose Either 'Upload' or 'Manual' to Insert New Course</h3>
-    <label>No errors encountered so far</label><br>
-    <label>Done with the validation of the input with not allow similar of course code and section</label>
-
     <!-- Top Centered Tabs -->
     <div class="tab-container">
         <div class="tab-nav2">
@@ -67,51 +62,35 @@
             <h4 style="text-align: center;">Manual Data Entry Section</h4>
             <div class="profile-frame">
                 <div class="form-right">
-                    <table class="enter-data-table">
-                        <tr style="text-align: center;"><th>Field</th><th>Input</th></tr>
-                        <tr>
-                            <td><label id="departmentLabel">Department</label></td>
-                            <td>
-                                <select name="courseDepartment" required>
-                                    <option value="" disabled selected>Select Department</option>
-                                    {% for dept in department_data %}
-                                        <option value="{{ dept.departmentCode }} - {{ dept.departmentName }}">
-                                            ({{ dept.departmentCode }}) {{ dept.departmentName }}
-                                        </option>
-                                    {% endfor %}
-                                </select>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>Course Code</td>
-                            <td><input type="text" name="courseCode" value="{{ courseCode_text }}" required></td>
-                        </tr>
-                        <tr>
-                            <td>Course Section</td>
-                            <td><input type="text" name="courseSection" value="{{ courseSection_text }}" required></td>
-                        </tr>
-                        <tr>
-                            <td>Course Name</td>
-                            <td><input type="text" name="courseName" value="{{ courseName_text }}" required></td>
-                        </tr>
-                    </table>
+                    <label id="departmentLabel">Department</label>
+                    <select name="courseDepartment" required>
+                        <option value="" disabled selected>Select Department</option>
+                        {% for dept in department_data %}
+                            <option value="{{ dept.departmentCode }} - {{ dept.departmentName }}">
+                                ({{ dept.departmentCode }}) {{ dept.departmentName }}
+                            </option>
+                        {% endfor %}
+                    </select><br>
+
+                    <label>Course Code</label>
+                    <input type="text" name="courseCode" value="{{ courseCode_text }}" required><br>
+
+                    <label>Course Section</label>
+                    <input type="text" name="courseSection" value="{{ courseSection_text }}" required><br>
+
+                    <label>Course Name</label>
+                    <input type="text" name="courseName" value="{{ courseName_text }}" required>
                 </div>
+                
                 <div class="form-right">
-                    <table class="enter-data-table">
-                        <tr style="text-align: center;"><th>Field</th><th>Input</th></tr>
-                        <tr>
-                            <td>Course Credit Hours</td>
-                            <td><input type="number" name="courseHour" value="{{ courseHour_text }}" required></td>
-                        </tr>
-                        <tr>
-                            <td>Practical Lecturer</td>
-                            <td><input type="text" name="coursePractical" value="{{ coursePractical_text }}"></td>
-                        </tr>
-                        <tr>
-                            <td>Tutorial Lecturer</td>
-                            <td><input type="number" name="courseTutorial" value="{{ courseTutorial_text }}"></td>
-                        </tr>
-                    </table>
+                    <label>Course Credit Hour(s)</label>
+                    <input type="number" name="courseHour" value="{{ courseHour_text }}" required><br>
+
+                    <label>Practical Lecturer</label>
+                    <input type="text" name="coursePractical" value="{{ coursePractical_text }}"><br>
+
+                    <lable>Tutorial Lecturer</lable>
+                    <input type="number" name="courseTutorial" value="{{ courseTutorial_text }}">
                 </div>
             </div>
             
