--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -26,6 +26,8 @@
     <!-- Announce Form -->
     <form id="announceForm" action="{{ url_for('admin_manageCourse') }}" method="POST" enctype="multipart/form-data">
         <div id="announceSection" class="function-frame">
+            <!-- 🔽 Add this hidden input here -->
+            <input type="hidden" name="form_type" value="announce">
         </div>
     </form>
 
