--- a/app/templates/user/userHomepage.html
+++ b/app/templates/user/userHomepage.html
@@ -3,58 +3,6 @@
 {% block title %}Homepage{% endblock %}
 {% block content %}
 <h1>Welcome Back - {{ user_name }}</h1>
-{% if user_level == 1 %}    
-<div class="dashboard-row">
-    <div class="dashboard-frame">
-        <h3>Cumulative Invigilation Hour</h3>
-        <p class="dashboard-text" style="color:green;">{{ user_invigilationHour }}</p>
-    </div>
-
-    <div class="dashboard-frame">
-        <h3>Pending Invigilation Hour</h3>
-        <p class="dashboard-text" style="color:blueviolet;">{{ user_pendingInvigilationHour }}</p>
-    </div>
-</div><br>
-
-<form action="{{ url_for('user_homepage') }}" method="POST">
-    <div style="padding: 10px;">
-        <h2>Confirm or Decline Invigilation Slot</h2>
-        <div class="user-table-container">
-            <table class="user-data-table">
-                <thead>
-                    <tr>
-                        <th>Course Name</th>
-                        <th>Course Code</th>
-                        <th>Exam Date</th>
-                        <th>Exam Day</th>
-                        <th>Exam Time</th>
-                        <th>Exam Period</th>
-                        <th>Action</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for record in records %}
-                    <tr>
-                        <td>{{ record.report.exam.course.courseName }}</td>
-                        <td>{{ record.report.exam.course.courseCodeSectionIntake }}</td>
-                        <td>{{ record.report.exam.examStartTime.strftime("%d/%b/%Y") }} - {{ record.report.exam.examEndTime.strftime("%d/%b/%Y") }}</td>
-                        <td>{{ record.report.exam.examStartTime.strftime("%A") }} - {{ record.report.exam.examEndTime.strftime("%A") }}</td>
-                        <td>{{ record.report.exam.examStartTime.strftime("%H:%M") }} - {{ record.report.exam.examEndTime.strftime("%H:%M") }}</td>
-                        <td>{{ (record.report.exam.examEndTime - record.report.exam.examStartTime).seconds // 3600 }}h {{ ((record.report.exam.examEndTime - record.report.exam.examStartTime).seconds % 3600) // 60 }}m</td>
-                        <td>
-                            <input type="hidden" name="record_id" value="{{ record.attendanceId }}">
-                            <button type="submit" name="action" value="accept" style="background-color: #d4edda; color: #155724; padding: 5%;">Accept</button>
-                            <button type="submit" name="action" value="reject" style="background-color: #f8d7da; color: #721c24; padding: 5%;">Reject</button>
-                        </td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-        </div>
-    </div>
-</form><br>
-{% endif %}
-
 <div class="menu-grid" style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 1%; width: 100%;">
     <a href="{{ url_for('user_ownTimetable')}}" style="text-decoration: none;">
         <div class="menu-section">
@@ -113,4 +61,88 @@
     </a>
     {% endif %}
 </div>
+
+{% if user_level == 1 %}    
+<div class="dashboard-row" style="grid-template-columns: repeat(5, 1fr);">
+    <div class="dashboard-frame">
+        <h3>Cumulative Invigilation Hour</h3>
+        <p class="dashboard-text" style="color:green;">{{ user_invigilationHour }}</p>
+    </div>
+
+    <div class="dashboard-frame">
+        <h3>Pending Invigilation Hour</h3>
+        <p class="dashboard-text" style="color:blueviolet;">{{ user_pendingInvigilationHour }}</p>
+    </div>
+</div><br>
+
+<form action="{{ url_for('user_homepage') }}" method="POST">
+    <div style="padding: 10px;">
+        <h2>Confirm or Decline Invigilation Slot</h2>
+        <div class="user-table-container">
+            <table class="user-data-table">
+                <thead>
+                    <tr>
+                        <th>Course Name</th>
+                        <th>Course Code</th>
+                        <th>Exam Date</th>
+                        <th>Exam Day</th>
+                        <th>Exam Time</th>
+                        <th>Exam Period</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for w in waiting %}
+                    <tr>
+                        <td>{{ w.report.exam.course.courseName }}</td>
+                        <td>{{ w.report.exam.course.courseCodeSectionIntake }}</td>
+                        <td>{{ w.report.exam.examStartTime.strftime("%d/%b/%Y") }} - {{ w.report.exam.examEndTime.strftime("%d/%b/%Y") }}</td>
+                        <td>{{ w.report.exam.examStartTime.strftime("%A") }} - {{ w.report.exam.examEndTime.strftime("%A") }}</td>
+                        <td>{{ w.report.exam.examStartTime.strftime("%H:%M") }} - {{ w.report.exam.examEndTime.strftime("%H:%M") }}</td>
+                        <td>{{ (w.report.exam.examEndTime - w.report.exam.examStartTime).seconds // 3600 }}h {{ ((w.report.exam.examEndTime - w.report.exam.examStartTime).seconds % 3600) // 60 }}m</td>
+                        <td>
+                            <input type="hidden" name="w_id" value="{{ w.attendanceId }}">
+                            <button type="submit" name="action" value="accept" style="background-color: #d4edda; color: #155724; padding: 5%;">Accept</button>
+                            <button type="submit" name="action" value="reject" style="background-color: #f8d7da; color: #721c24; padding: 5%;">Reject</button>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+</form><br>
+
+<form action="{{ url_for('user_homepage') }}" method="POST">
+    <div style="padding: 10px;">
+        <h2>Incoming Invigilation Slot</h2>
+        <div class="user-table-container">
+            <table class="user-data-table">
+                <thead>
+                    <tr>
+                        <th>Course Name</th>
+                        <th>Course Code</th>
+                        <th>Exam Date</th>
+                        <th>Exam Day</th>
+                        <th>Exam Time</th>
+                        <th>Exam Period</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for c in confirm %}
+                    <tr>
+                        <td>{{ c.report.exam.course.courseName }}</td>
+                        <td>{{ c.report.exam.course.courseCodeSectionIntake }}</td>
+                        <td>{{ c.report.exam.examStartTime.strftime("%d/%b/%Y") }} - {{ c.report.exam.examEndTime.strftime("%d/%b/%Y") }}</td>
+                        <td>{{ c.report.exam.examStartTime.strftime("%A") }} - {{ c.report.exam.examEndTime.strftime("%A") }}</td>
+                        <td>{{ c.report.exam.examStartTime.strftime("%H:%M") }} - {{ c.report.exam.examEndTime.strftime("%H:%M") }}</td>
+                        <td>{{ (c.report.exam.examEndTime - c.report.exam.examStartTime).seconds // 3600 }}h {{ ((c.report.exam.examEndTime - c.report.exam.examStartTime).seconds % 3600) // 60 }}m</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+</form><br>
+{% endif %}
 {% endblock %}
